tests/ui/parser/diff-markers/use-statement.rs
use foo::{
<<<<<<< HEAD //~ ERROR encountered git conflict marker
    bar,
=======
    baz,
>>>>>>> branch
};

fn main() {}
